--- a/css/common.css
+++ b/css/common.css
@@ -48,7 +48,10 @@ button {
 .gallery li img {
   display: block;
   max-height: 100%; 
-  width: auto;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center bottom;
 }
 
 /* -===zad 3 END ===- */
